Fix a crash in SvgTextTool when deleting hovered/selected shape

In general we shouldn't store any pointers to shapes in the tool.
If we really need it, we should subscribe to 'selectionChanged' or
'shapeChanged' signals to ensure we know when the shape got destroyed
by some unexpected (for us) entity (e.g. undo stack).

BUG:392128
(cherry picked from commit 31e1f56160297e0bde0180c60a31452366a7b365)